# SmartDriveMonitor

./: .gitignore  README.md  inject_scenarios.ps1  settings.gradle.kts
.github/workflows/: native-ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/smartdrivemonitor/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/smartcabin/: ExampleInstrumentedTest.kt  NativeBridgeAndroidTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/smartcabin/nativecore/: DriverStateParcelable.aidl  IDriverMonitorListener.aidl  IDriverMonitorService.aidl
app/src/main/assets/: DriverBehavior.tflite  scaler_meta.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/anfis_engine/: AnfisEngine.cpp  AnfisEngine.h
app/src/main/cpp/daemon/: Android.bp  DaemonCore.cpp  DaemonCore.h  driver_monitor.rc  driver_monitor.te  driver_monitor_daemon.cpp
app/src/main/cpp/jni/: native-lib.cpp
app/src/main/cpp/sensor_fusion/: CanDecoder.cpp  CanDecoder.h  KalmanFilter.cpp  KalmanFilter.h
app/src/main/cpp/utils/: SpscRingBuffer.h
app/src/main/java/com/example/smartdrivemonitor/: MainActivity.kt  SmartDriveApp.kt
app/src/main/java/com/smartcabin/: MainActivity.kt  SmartDriveApp.kt
app/src/main/java/com/smartcabin/di/: DataModule.kt  MLModule.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/cpp/: anfis_engine_test.cpp
app/src/test/java/com/smartcabin/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: can_replay.py
test_data/: perfect_data.csv  perfect_driving_data.csv
(+65 files in other folders)
